@@ -1,5 +1,5 @@
 %define betatag beta7
-%define buildnum 16
+%define buildnum 17
 %define python_sitelib %(%{__python} -c 'from distutils import sysconfig; print sysconfig.get_python_lib()')
 
 %define selinuxconf %{_sysconfdir}/selinux/config
